--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -6,6 +6,7 @@ repositories {
     maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
     maven { url = 'https://repo.codemc.org/repository/maven-public/' }
     maven { url = 'https://repo.codemc.org/repository/nms/' }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -20,6 +21,7 @@ dependencies {
     implementation 'com.zaxxer:HikariCP:3.4.5'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.6.2'
     implementation 'de.tr7zw:item-nbt-api:2.9.2'
+    compileOnly "com.github.MilkBowl:VaultAPI:1.7"
 }
 
 processResources {
