--- a/bukkit/src/main/resources/lang.yml
+++ b/bukkit/src/main/resources/lang.yml
@@ -17,3 +17,4 @@ config-reload: '&aAll configuration files have been reloaded.'
 blacklisted-item: '&cYou cannot place this item inside your vault.'
 player-not-found: '&cCannot find that player, are they online?'
 only-from-console: '&cThis command can only be ran from the console.'
+unlock-vault: '&aВы разблокировали ячейку номер &b&l'
