--- a/bukkit/src/main/resources/lang.yml
+++ b/bukkit/src/main/resources/lang.yml
@@ -18,3 +18,8 @@ blacklisted-item: '&cYou cannot place this item inside your vault.'
 player-not-found: '&cCannot find that player, are they online?'
 only-from-console: '&cThis command can only be ran from the console.'
 unlock-vault: '&aВы разблокировали ячейку номер &b&l'
+already-owned: '&a&lУ вас уже куплена ячейка'
+not-number-error: '&a&lНомер ячейки задаётся числом'
+must-enter-number: '&a&lВведите номер ячейки для покупки'
+not-enough-money: '&a&lУ вас недостаточно денег для покупки ячейки'
+max-number-of-vault: '&a&lНомер ячейки не должен быть больше &b&l56'
