--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,6 @@
  * in the user manual at https://docs.gradle.org/6.5.1/userguide/multi_project_builds.html
  */
 
-include ":api", ":bukkit", ":nms", ":v1_8_R3", ":v1_11_R1", ":v1_14_R1", ":v1_17_R1", ":v1_18_R1"
+include ":api", ":bukkit", ":nms", ":v1_8_R3", ":v1_11_R1", ":v1_14_R1", ":v1_17_R1", ":v1_18_R1", ":v1_19_R2"
 rootProject.name = 'EnderVaults'
 
